--- a/tippr/Base.lproj/Main.storyboard
+++ b/tippr/Base.lproj/Main.storyboard
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="tippr" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +21,74 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="$0.00" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bQW-aU-fxW">
+                                <rect key="frame" x="193" y="40" width="166" height="74"/>
+                                <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="62"/>
+                                <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
+                            </textField>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="fwY-QG-6C4">
+                                <rect key="frame" x="16" y="130" width="343" height="29"/>
+                                <segments>
+                                    <segment title="15%"/>
+                                    <segment title="20%"/>
+                                    <segment title="22%"/>
+                                </segments>
+                                <color key="tintColor" white="1" alpha="0.80000000000000004" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <action selector="didTapSegmentControl:" destination="BYZ-38-t0r" eventType="valueChanged" id="JwE-9a-iRd"/>
+                                </connections>
+                            </segmentedControl>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$0.00" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.20000000000000001" translatesAutoresizingMaskIntoConstraints="NO" id="fZ5-PX-F2u">
+                                <rect key="frame" x="289.5" y="174" width="69.5" height="31.5"/>
+                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="26"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="0.80000000000000004" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$0.00" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.20000000000000001" translatesAutoresizingMaskIntoConstraints="NO" id="82h-4J-7jg">
+                                <rect key="frame" x="253" y="205.5" width="106" height="48"/>
+                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="40"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="0.80000000000000004" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="+" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.20000000298023224" translatesAutoresizingMaskIntoConstraints="NO" id="xQc-4E-zv4">
+                                <rect key="frame" x="265.5" y="171" width="16" height="31.5"/>
+                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="26"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.20392156859999999" green="0.28627450980000002" blue="0.36862745099999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="fZ5-PX-F2u" firstAttribute="top" secondItem="fwY-QG-6C4" secondAttribute="bottom" constant="16" id="0eH-vR-POC"/>
+                            <constraint firstItem="fZ5-PX-F2u" firstAttribute="leading" secondItem="xQc-4E-zv4" secondAttribute="trailing" constant="8" id="8Ra-L7-SzA"/>
+                            <constraint firstItem="fwY-QG-6C4" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="9cn-xh-WIm"/>
+                            <constraint firstItem="bQW-aU-fxW" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="20" id="OJb-02-CzS"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="82h-4J-7jg" secondAttribute="trailing" id="U3Q-jh-9m0"/>
+                            <constraint firstItem="fwY-QG-6C4" firstAttribute="top" secondItem="bQW-aU-fxW" secondAttribute="bottom" constant="16" id="XLT-5f-1vF"/>
+                            <constraint firstItem="fwY-QG-6C4" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="XiD-N3-JHP"/>
+                            <constraint firstItem="82h-4J-7jg" firstAttribute="top" secondItem="fZ5-PX-F2u" secondAttribute="bottom" id="gYw-5I-Top"/>
+                            <constraint firstItem="xQc-4E-zv4" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="ieS-oE-m2M"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="bQW-aU-fxW" secondAttribute="trailing" id="k41-Mb-NDq"/>
+                            <constraint firstItem="82h-4J-7jg" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="pNn-lu-pUE"/>
+                            <constraint firstItem="xQc-4E-zv4" firstAttribute="centerY" secondItem="fZ5-PX-F2u" secondAttribute="centerY" constant="-3" id="t8g-Yv-MIc"/>
+                            <constraint firstItem="bQW-aU-fxW" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="tTB-tm-g95"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="fZ5-PX-F2u" secondAttribute="trailing" id="vhG-Xa-RTj"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="initialAmountTextField" destination="bQW-aU-fxW" id="UXi-vR-8lR"/>
+                        <outlet property="tipAmountLabel" destination="fZ5-PX-F2u" id="y8a-gb-HAS"/>
+                        <outlet property="tipPercentageSegmentView" destination="fwY-QG-6C4" id="kiy-31-2F1"/>
+                        <outlet property="totalAmountLabel" destination="82h-4J-7jg" id="BIZ-4O-nQl"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="100" y="122.78860569715144"/>
         </scene>
     </scenes>
+    <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
 </document>
